# NJU_SEExp2020

./: .clang-format  .gitignore  readme.md
docs/: CodeStructure.md  CodeStyle.md  ConsoleUserManual.md  DeveloperManual.md  GuiUserManual.md  POW.md  ProjectDevelopDoc.md  RoadMap.md  TestSummaryDoc.md  静态分析工具设计文档.docx
docs/20200606_console_test_doc/: index.html
docs/20200608_console_test_doc/: index.html
docs/20200625_gui_test_doc/: index.html
docs/20200629_JsonProc_test_doc/: index.html
docs/20200630_JsonProc_test_doc/: index.html
docs/20200630_gui_test_doc/: index.html
docs/20200701_console_test_doc/: index.html
docs/20200703_gui_test_doc/: index.html
docs/benchmark/: benchmark.md
docs/design/: ArrayBoundChecker.md  CoreFramework.md  DereferenceChecker.md  DivModZeroChecker.md  MemoryChecker.md  UninitObjChecker.md  gui_seq.md
docs/gui_test_instruction/: 测试流程.md
docs/meeting/: 2020年4月23日会议记录.md  2020年4月30日会议记录.md  2020年5月07日会议记录.md  2020年5月14日会议记录.md  2020年5月21日会议记录.md  2020年5月28日会议记录.md  2020年6月04日会议记录.md  2020年6月11日会议记录.md  会议记录模板.md
final/: CodeStructure.html  ConsoleUserManual.html  DeveloperManual.html  GuiUserManual.html  Meeting.html  ProjectDevelopDoc.html  README.md
src/: CMakeLists.txt
src/console/: CMakeLists.txt  main.cpp
src/console/REPL/: Shell.cpp  Shell.h  ShellCommands.cpp  ShellContext.h
src/core/: AnalyzerOptions.cpp  AnalyzerOptions.h  CMakeLists.txt  CSADriver.cpp  CSADriver.h  CommandLineParser.cpp  CommandLineParser.h  Event.cpp  Event.h  HtmlPrinter.cpp  HtmlPrinter.h  Logger.cpp  Logger.h  OutputManager.cpp  OutputManager.h  OutputOptions.cpp  OutputOptions.h  ResultCollector.cpp  ResultCollector.h  StaticAnalyzer.cpp  StaticAnalyzer.h
src/core/Json/: DiagJsonTransform.cpp  DiagJsonTransform.h  JsonProc.cpp  JsonProc.h
src/core/Statistics/: StatisticsHelper.cpp  StatisticsHelper.h
src/core/checker/: ArrayBoundChecker.cpp  ArrayBoundChecker.h  DereferenceChecker.cpp  DereferenceChecker.h  DivModZeroChecker.cpp  DivModZeroChecker.h  MemoryChecker.cpp  MemoryChecker.h
src/core/checker/UninitObjChecker/: UninitObjCheckerUtil.cpp  UninitObjCheckerUtil.h  UninitializedObjectChecker.cpp  UninitializedObjectChecker.h
src/core/tool/: Instance.cpp  Instance.h
src/core/utility/: Timer.h
src/gui/: Hisa_GUI.pro  config.txt  main.cpp
src/gui/DirTreeDialog/: dirtreedialog.cpp  dirtreedialog.h
src/gui/ExplanationDialog/: explanationdialog.cpp  explanationdialog.h
src/gui/History/: History.cpp  History.h
src/gui/HistoryDialog/: historydialog.cpp  historydialog.h
src/gui/Language/: language.h
src/gui/MainWindow/: mainwindow.cpp  mainwindow.h
src/gui/ProcessDialog/: processdialog.cpp  processdialog.h
src/gui/preprocessor/: CMakeLists.txt  FileSystemTree.cpp  FileSystemTree.h  Preprocessor.cpp  Preprocessor.h
src/mainpage/: ConsoleUserManual.html  mainpage.html
test/: CMakeLists.txt  test_commandline.txt  test_json.json  test_repl.txt
test/ArrayBoundChecker/: arrayBoundOverflows.cpp  bufferOverflows.cpp  bufferOverflows2.cpp  pointerOverflows.cpp
test/DereferenceChecker/: direct.cpp  implicit.cpp  normal.cpp  undefine.cpp
test/DivModZeroChecker/: div_and_mod_zero.cpp  test.h
test/MemoryChecker/: double_delete.cpp  double_free.cpp  memory_leak.cpp  use_after_free.cpp
test/UninitObjChecker/: baseClass_field.cpp  cyclic_loc_field.cpp  loc_field.cpp  needCast_loc_field.cpp  regular_field.cpp  remaining_test.cpp
(+2268 files in other folders)
